tests/out/error/array/expr_init.out
tests/out/error/array/expr_init.in.bt:1:7 error: expected element type string, got i32
tests/out/error/array/expr_init.in.bt:1:7 error: expected element type string, got bool
